tests/transpiler/x/scala/tail_recursion.error
exit status 1
/workspace/mochi/tests/transpiler/x/scala/tail_recursion.scala:3: error: ':' expected but ',' found.
  def sum_rec(n, acc) = {
               ^
/workspace/mochi/tests/transpiler/x/scala/tail_recursion.scala:11: error: identifier expected but '}' found.
}
^
two errors found
