tests/transpiler/x/scala/tail_recursion.scala
// Generated by Mochi v0.10.31 on 2025-07-20 02:18:49 GMT+7
object Main extends App {
  def sum_rec(n, acc) = {
    if ((n == 0)) {
    acc
  }
    sum_rec((n - 1), (acc + n))
  }

  println(sum_rec(10, 0))
}
